--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 	<link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
 	<link rel="stylesheet" href="css/styles.css">
 
-
 	<!--Let browser know website is optimized for mobile-->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
@@ -18,7 +17,8 @@
 	<!--Import jQuery before materialize.js-->
 	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 	<script type="text/javascript" src="js/materialize.min.js"></script>
-
+    <!-- Custom js -->
+    <script src="js/scripts.js"></script>
 	<nav>
 	  <div class="nav-wrapper blue">
 		<a href="#" data-activates="nav-side" class="button-collapse"><i class="material-icons">menu</i></a>
@@ -32,12 +32,12 @@
 	<div class="row centered-div">
 		<div class="card large">
 			<div class="card-content">
-				<span class="card-title">Hello World</span>
-				<p id="storyText">This is where some content will go!</p>
+				<span class="card-title">Destroyer Story</span>
+				<p id="storyText">Story Text</p>
 				<form action="#" id="optionPicker">
 					<p>
 						<input type="radio" class="with-gap" name="group1" id="option1"/>
-						<label for="option1">This is an option</label>
+						<label for="option1">Option 1</label>
 						<br/>
 						<input type="submit" vlaue="Submit" class="btn waves-effect waves-light"/>
 					</p>
@@ -48,19 +48,3 @@
 	</div>
 </body>
 </html>
-
-<script>
-	$(document).ready(function(){
-		$(".button-collapse").sideNav();
-	});	
-	$('#optionPicker').submit(function(event){
-		event.preventDefault(); //Stop the submission
-		var textToSet = "None Selected";
-		if ($("#option1").is(":checked")){
-			textToSet = $("#option1").text();
-		}
-		$('#storyText').text(function(i, oldText){
-			return textToSet;
-		});
-	});
-</script>
