Adding radio buttons with jQuery
Currently trying to get the labels and radios working well together.

--- a/index.html
+++ b/index.html
@@ -31,18 +31,14 @@
 
 	<div class="row centered-div">
 		<div class="card large">
-			<div class="card-content">
+			<div class="custom-fill">
 				<span class="card-title">Destroyer Story</span>
 				<p id="storyText">Story Text</p>
 				<form action="#" id="optionPicker">
-					<p>
-						<input type="radio" class="with-gap" name="group1" id="option1"/>
-						<label for="option1">Option 1</label>
-						<br/>
-						<input type="submit" vlaue="Submit" class="btn waves-effect waves-light"/>
-					</p>
+					<div id="choice_area">
+					</div>
+                    <input type="submit" vlaue="Submit" class="btn waves-effect waves-light"/>
 				</form>
-				<p>
 			</div>
 		</div>
 	</div>
