--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<a href="#" data-activates="nav-side" class="button-collapse"><i class="material-icons">menu</i></a>
 		<a href="#" class="right brand-logo">Branching Marvel Adventure</a>
 		<ul id="nav-side" class="side-nav">
-			<li><a href="#">TESTING</a></li>
+			<li><a href="#" id="btnStartOver">Start Over</a></li>
 		</ul>
 	  </div>
 	</nav>
@@ -34,10 +34,10 @@
 			<div class="custom-fill">
 				<span class="card-title">Destroyer Story</span>
 				<p id="storyText">Story Text</p>
-				<form action="#" id="optionPicker">
+                <form action="#" id="optionPicker">
 					<div id="choice_area">
 					</div>
-                    <input type="submit" vlaue="Submit" class="btn waves-effect waves-light"/>
+                    <input type="submit" vlaue="Submit" class="right btn waves-effect waves-light"/>
 				</form>
 			</div>
 		</div>
