--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
     <script src="js/scripts.js"></script>
 	<nav>
 	  <div class="nav-wrapper blue">
-		<a href="#" data-activates="nav-side" class="button-collapse"><i class="material-icons">menu</i></a>
-		<a href="#" class="right brand-logo">Branching Marvel Adventure</a>
-		<ul id="nav-side" class="side-nav">
+		<a href="#" class="left brand-logo title-padding">Branching Marvel Adventure</a>
+		<ul id="nav-side" class="right hide-on-med-and-down">
 			<li><a href="#" id="btnStartOver">Start Over</a></li>
 		</ul>
 	  </div>
@@ -44,5 +43,31 @@
 			</div>
 		</div>
 	</div>
+    
+    <footer class="page-footer blue">
+        <div class="container">
+            <div class="row">
+                <div class="col l6 s12">
+                    <h5 class="white-text">Footer Content</h5>
+                    <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+                </div>
+                <div class="col l4 offset-l2 s12">
+                    <h5 class="white-text">Links</h5>
+                    <ul>
+                        <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
+                        <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
+                        <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
+                        <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="footer-copyright">
+            <div class="container">
+                © 2014 Copyright Text
+                <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
