--- a/index.html
+++ b/index.html
@@ -16,20 +16,23 @@
 </head>
 
 <body>
-	<!--Import jQuery before materialize.js-->
-	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-	<script type="text/javascript" src="js/materialize.min.js"></script>
-    <!-- Custom js -->
-    <script src="js/scripts.js"></script>
-	<nav>
-	  <div class="nav-wrapper blue">
-		<a href="#" class="left brand-logo title-padding">Branching Marvel Adventure</a>
-		<ul id="nav-side" class="right hide-on-med-and-down">
-			<li><a href="#" id="btnStartOver">Start Over</a></li>
-		</ul>
-	  </div>
-	</nav>
+    <header>
+        <!--Import jQuery before materialize.js-->
+        <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+        <script type="text/javascript" src="js/materialize.min.js"></script>
+        <!-- Custom js -->
+        <script src="js/scripts.js"></script>
+        <nav>
+        <div class="nav-wrapper blue">
+            <a href="#" class="left brand-logo title-padding">Branching Marvel Adventure</a>
+            <ul id="nav-side" class="right hide-on-med-and-down">
+                <li><a href="#" id="btnStartOver">Start Over</a></li>
+            </ul>
+        </div>
+        </nav>
+    </header>
 
+    <main>
 	<div class="row centered-div">
 		<div class="card large">
 			<div class="custom-fill">
@@ -43,29 +46,28 @@
 			</div>
 		</div>
 	</div>
+    </main>
     
     <footer class="page-footer blue">
         <div class="container">
             <div class="row">
                 <div class="col l6 s12">
-                    <h5 class="white-text">Footer Content</h5>
+                    <h5 class="white-text">Website Created By Daniel Fisher</h5>
                     <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
                 </div>
                 <div class="col l4 offset-l2 s12">
-                    <h5 class="white-text">Links</h5>
+                    <h5 class="white-text">Resources</h5>
                     <ul>
-                        <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-                        <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-                        <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-                        <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+                        <li><a class="grey-text text-lighten-3" href="http://materializecss.com/" target="_blank">Materialize</a></li>
+                        <li><a class="grey-text text-lighten-3" href="http://www.w3schools.com/css/" target="_blank">CSS</a></li>
+                        <li><a class="grey-text text-lighten-3" href="http://www.w3schools.com/js/" target="_blank">JavaScript</a></li>
                     </ul>
                 </div>
             </div>
         </div>
         <div class="footer-copyright">
             <div class="container">
-                © 2014 Copyright Text
-                <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+                © 2016 Dan Fisher
             </div>
         </div>
     </footer>
