--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <main>
 	<div class="row centered-div">
-		<div class="card large">
+		<div class="card">
 			<div class="custom-fill">
 				<span class="card-title">Destroyer Story</span>
 				<p id="storyText">Story Text</p>
@@ -53,7 +53,7 @@
             <div class="row">
                 <div class="col l6 s12">
                     <h5 class="white-text">Website Created By Daniel Fisher</h5>
-                    <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+                    <p class="grey-text text-lighten-4">ENGL-375, Project 3</p>
                 </div>
                 <div class="col l4 offset-l2 s12">
                     <h5 class="white-text">Resources</h5>
